[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-depth-anything"
version = "1.0.0"
description = "Video Depth Anything - Temporally consistent depth estimation for videos"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "DepthAnything Team"},
]
keywords = ["depth estimation", "computer vision", "video", "temporal consistency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=1.13.0",
    "torchvision>=0.14.0",
    "numpy>=1.23.0",
    "opencv-python>=4.8.0",
    "pillow>=9.0.0",
    "tqdm>=4.65.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/jeanac/Video-Depth-Anything"
Repository = "https://github.com/jeanac/Video-Depth-Anything"
"Original Repository" = "https://github.com/DepthAnything/Video-Depth-Anything"

[tool.setuptools]
# Use find to automatically discover all subpackages
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.pth", "*.pt"]

